--- a/.github/workflows/ci.updated.yml
+++ b/.github/workflows/ci.updated.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches: ["**"]
 
 jobs:
   test:
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-          
+
       - name: Install deps (if requirements exist)
         shell: bash
         run: |
@@ -31,8 +31,30 @@ jobs:
           fi
           pip install pytest
 
+      - name: Verify test assets exist (repo-relative)
+        shell: bash
+        run: |
+          test -s test/ASR_test.wav
+          test -s test/OCR_test.mp4
+
       - name: Syntax check (compileall)
-        run: python -m compileall .
+        shell: bash
+        run: |
+          if [ -d Project ]; then
+            python -m compileall Project
+          else
+            python -m compileall .
+          fi
 
       - name: Run tests
-        run: pytest -q || true
+        shell: bash
+        run: |
+          set +e
+          pytest -q
+          code=$?
+          set -e
+          if [ $code -eq 5 ]; then
+            echo "No tests collected (pytest exit code 5). Treating as success."
+            exit 0
+          fi
+          exit $code
